:sparkles: add transactions page
